--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,26 @@
 {
-  "name": "tray-app-electron",
-  "version": "1.0.0",
-  "main": "main.js",
+  "build": {
+    "productName": "ChaldeaStockObservatory",
+    "appId": "com.electron.ChaldeaStockObservatory-com-app",
+    "copyright": "© 2019 zmcx16",
+    "files": [
+      "./**/*",
+	  "app/*"
+    ],
+    "directories": {
+      "output": "./dist",
+      "app": "./app"
+    }
+  },
+  "scripts": {
+    "start": "electron ./app/main.js",
+    "dev": "electron --inspect=5858 ./app/main.js",
+    "packager": "electron-packager ./app ChaldeaStockObservatory --out ./dist --appVersion 1.0.0 --overwrite",
+    "build:dir": "electron-builder --dir",
+    "build": "electron-builder"
+  },
   "devDependencies": {
+    "electron": "^5.0.1",
+    "electron-builder": "^20.39.0"
   }
 }
