--- a/src/package.json
+++ b/src/package.json
@@ -34,7 +34,8 @@
   },
   "devDependencies": {
     "electron": "^5.0.1",
-    "electron-builder": "^20.39.0"
+    "electron-builder": "^20.39.0",
+    "electron-rebuild": "^1.8.4"
   },
   "dependencies": {
     "zerorpc": "^0.9.8"
