--- a/src/package.json
+++ b/src/package.json
@@ -38,7 +38,10 @@
     "electron-rebuild": "^1.8.4"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "detect-port": "^1.3.0",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "zerorpc": "^0.9.8"
   }
 }
