--- a/src/package.json
+++ b/src/package.json
@@ -17,8 +17,12 @@
     "appId": "com.electron.ChaldeaStockObservatory-com-app",
     "copyright": "© 2019 zmcx16",
     "compression": "maximum",
+	"asar": false,
     "directories": {
       "output": "./dist"
+    },
+	"files":{
+        "filter": ["!user_data/*"]
     },
     "win": {
       "icon": "ChaldeaStockObservatory.ico",
