fix href='#' will crash only in win32 dist problem

--- a/src/package.json
+++ b/src/package.json
@@ -17,12 +17,14 @@
     "appId": "com.electron.ChaldeaStockObservatory-com-app",
     "copyright": "© 2019 zmcx16",
     "compression": "maximum",
-	"asar": false,
+    "asar": false,
     "directories": {
       "output": "./dist"
     },
-	"files":{
-        "filter": ["!user_data/*"]
+    "files": {
+      "filter": [
+        "!user_data/*"
+      ]
     },
     "win": {
       "icon": "ChaldeaStockObservatory.ico",
