--- a/src/package.json
+++ b/src/package.json
@@ -41,7 +41,8 @@
   "devDependencies": {
     "electron": "^5.0.1",
     "electron-builder": "^20.39.0",
-    "electron-rebuild": "^1.8.4"
+    "electron-rebuild": "^1.8.4",
+    "eslint": "^5.16.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
